k8s/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sy3-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: front-end.intra
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: vuejs-service
                port:
                  number: 80
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
